cloud/logs/infiltration.log
nohup: ignoring input
python: can't open file '/data/data/com.termux/files/home/empress/throne/infiltration_soldiers.py': [Errno 2] No such file or directory
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/infiltration_soldiers.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
nohup: ignoring input
  File "/data/data/com.termux/files/home/empress/throne/rootless_infiltration.py", line 1
    404: Not Found
    ^^^
SyntaxError: illegal target for annotation
